mutate_admission_ca.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: mutating-webhook
  namespace: test
webhooks:
  - name: test.mutate.com
    failurePolicy: Fail
    admissionReviewVersions: ["v1"]
    sideEffects: None
    clientConfig:
      service:
        name: mutate-webhook-svc
        namespace: default
        path: /mutate/pods
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUN5RENDQWJDZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwcmRXSmwKY201bGRHVnpNQjRYRFRJd01EVXdOREExTkRZeE1Gb1hEVE13TURVd01qQTFORFl4TUZvd0ZURVRNQkVHQTFVRQpBeE1LYTNWaVpYSnVaWFJsY3pDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTWVaCnZRMUV6bjFDWWw1bnNsS1VqNnRoNHpING1iSmRyTmlNT2FPR01NMUhxbFZGSS9mOEhxMEFGQTd3UHpmc1pHYmUKL04rUjI1Qkhvam9UUGZUb2Ura0hVdUYyNzVpNGk3SzRnRXBCVU9zbzZnWTFKV0x4dmx3YXBoT0NFeHNMUjJyQgp4WU5YRU92aENB [...]
    rules:
      - apiGroups:
          - "*"
        resources:
          - "pods"
        apiVersions: ["v1"]
        operations:
          - CREATE
